--- a/flex.css
+++ b/flex.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .container {
   width: 100%;
@@ -59,17 +59,34 @@
   width: 100%;
 }
 .logo {
-  background-color: blue;
+  background-color: rgb(79, 79, 236);
   padding: 1rem;
-  text-align: center;
 }
 .menu {
   background-color: chartreuse;
   padding: 1rem;
-  text-align: center;
 }
 .banner {
-  background-color: coral;
+  background-color: rgb(255, 40, 20);
   padding: 4rem;
+}
+body {
   text-align: center;
+}
+.bolum1,
+.bolum2,
+.bolum3 {
+  background-color: rgb(47, 255, 213);
+  justify-content: center;
+  border: 1px solid black;
+  height: 30rem;
+}
+.section div {
+  background-color: orange;
+  height: 4rem;
+  border: 1px solid black;
+}
+.footer {
+  background-color: rgb(223, 35, 223);
+  height: 7rem;
 }
